# Demiurge_MLOps_TestData

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
claudedocs/: research_library_analysis_20260304.md
configs/datasets/: manifest.yaml
configs/pipelines/: airbnb_postgresql.yaml  amazon_reviews_elasticsearch.yaml  appliances_energy_s3.yaml  bitcoin_kafka.yaml  bosch_s3.yaml  cc_fraud_elasticsearch.yaml  chinook_mysql.yaml  clickstream_redis.yaml  dataco_s3.yaml  electric_power_postgresql.yaml  enron_email_elasticsearch.yaml  euro_soccer_sqlite.yaml  foodcom_mongodb.yaml  fraud_trans_kafka.yaml  ga_store_bigquery.yaml  geolife_mongodb.yaml  github_metadata_mongodb.yaml  hm_s3.yaml  home_credit_postgresql.yaml  ieee_fraud_kafka.yaml  instacart_mongodb.yaml  network_traffic_kafka.yaml  northwind_postgresql.yaml  nyc_taxi_postgresql.yaml  olist_postgresql.yaml  smart_mfg_mqtt.yaml  stackoverflow_elasticsearch.yaml  store_sales_postgresql.yaml  tmdb_mongodb.yaml  twitter_sentiment_nats.yaml  weather_kafka.yaml  yelp_mongodb.yaml
data/raw/: .gitignore
docs/: 00-프로젝트-개요.md  01-시스템-아키텍처.md  02-데이터-흐름.md  03-어댑터-설계.md  04-핸들러-설계.md  05-제너레이터-설계.md  06-인프라-구성.md  07-데이터셋-활용-방안.md  08-테스트-전략.md  09-구현-로드맵.md  10-연결-가이드.md  11-데이터-수집-시딩.md  12-데이터-제공-설계.md  integration-guide.md
src/demiurge_testdata/: __init__.py  __main__.py
src/demiurge_testdata/adapters/: __init__.py  base.py
src/demiurge_testdata/core/: __init__.py  config.py  enums.py  exceptions.py  pipeline.py  registry.py  seed.py  seed_test.py
src/demiurge_testdata/data/: __init__.py  downloader.py
src/demiurge_testdata/generators/: __init__.py  adapter_test.py  base.py  csv_generator.py
src/demiurge_testdata/handlers/: __init__.py  base.py  chain.py
src/demiurge_testdata/schemas/: __init__.py  config.py  record.py
src/demiurge_testdata/storage/: backend.py
tests/: conftest.py
tests/integration/: test_kafka.py  test_mongodb.py  test_postgresql.py  test_s3.py  test_seed_pipeline.py
tests/integration/e2e/: test_e2e_pipelines.py
tests/unit/: test_benchmarks.py  test_phase6.py  test_yaml_configs.py
tests/unit/adapters/: test_adapters.py  test_adapters_phase5.py
tests/unit/core/: test_config.py  test_enums.py  test_pipeline.py  test_registry.py
tests/unit/generators/: test_csv_generator.py  (+3 more)
(+87 files in other folders)
